# django-backend

./: README.md  pyproject.toml
scripts/: manage.py  test.py
src/apps/csv_processor/: views.py
src/project/: settings.py  urls.py
