[tool.poetry]
name = "django-csv-processor"
version = "0.1.0"
description = ""
authors = ["LEv145"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
coverage = "^7.1.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
